Pievienoju picas izveidi

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/frame/Main.java=UTF-8
+encoding//src/technical/ItemRenderer.java=UTF-8
 encoding/<project>=windows-1252
