--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/frame/Main.java=UTF-8
+encoding//src/frame/Panel.java=UTF-8
 encoding//src/technical/ItemRenderer.java=UTF-8
 encoding/<project>=windows-1252
